fix: Project settings: Android support library instead of app compat one, that was added accidentally; proguard configuration for release build.

--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -30,8 +30,8 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            runProguard true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.txt'
         }
     }
     sourceSets {
@@ -46,7 +46,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:support-v4:+'
 
     compile project(path: ':sony-camera-remote-lib')
 
