add: Settings buttons prototype: for now there are self-timer and zoom buttons. add: Experimental value selector widget. Automatically places the selection items around the selector button depending on free space in layout. add: Self-timer feature.

--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -49,11 +49,14 @@ dependencies {
     compile 'com.android.support:support-v4:+'
 
     compile project(path: ':sony-camera-remote-lib')
+    compile project(path: ':praetorian-widgets-lib')
 
     compile 'com.google.code.gson:gson:2.2.4'
 
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
+
+    compile 'com.google.guava:guava:17.0-rc2'
 }
 
 apt {
