--- a/android-app/src/main/AndroidManifest.xml
+++ b/android-app/src/main/AndroidManifest.xml
@@ -5,14 +5,15 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".ThisApp_"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.praetoriandroid.cameraremote.app.MainActivity_"
+            android:name=".MainActivity_"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
