--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':sony-camera-remote-lib', ':command-line-tool', ':android-app'
+include ':sony-camera-remote-lib', ':command-line-tool', ':android-app', ':praetorian-widgets-lib'
