--- a/command-line-tool/build.gradle
+++ b/command-line-tool/build.gradle
@@ -10,6 +10,12 @@ repositories {
 jar {
     baseName = 'cameraremote-tool'
     version = '0.1.0'
+
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+
+    manifest {
+        attributes 'Main-Class': 'com.praetoriandroid.cameraremote.tool.RemoteControl'
+    }
 }
 
 dependencies {
